--- a/shop.html
+++ b/shop.html
@@ -295,6 +295,13 @@
         </div>
       </div>
     </section>
+    
+    <section id="pagination" class="section-p1">
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+    </section>
+
     <section id="newsletter" class="section-p1" class="section-m1">
       <div class="letter">
         <h3 class="letterTitle">
