--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </section>
 
     <section id="hero">
-      <h4>Trade-in-offer</h4>
-      <h2>Super value deals</h2>
-      <h1>On all products</h1>
-      <p>Save more with coupons & up to 70% off!</p>
-      <button>Shop now</button>
+      <h4>Savdo-taklif</h4>
+      <h2>Super qiymatli bitimlar</h2>
+      <h1>Barcha mahsulotlarda</h1>
+      <p>Kuponlar va 70% gacha chegirma bilan pulingizni tejang!</p>
+      <button>Hozir xarid qiling</button>
     </section>
 
     <section id="feature" class="section-p1">
