--- a/contact.html
+++ b/contact.html
@@ -30,14 +30,93 @@
     </section>
 
     <section id="about-hero">
-      <h2>#Biz haqimizda</h2>
+      <h2>#Biz bilan aloqa</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis!
       </p>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="section-p1">
+      <div class="contact-deatels">
+        <p>Bizga bog'laning</p>
+        <h2>
+          Bizning agentlik manzillaridan biriga tashrif buyuring yoki bugun biz
+          bilan bog'laning
+        </h2>
+        <h3>Bosh idora</h3>
+        <div>
+          <li>
+            <i class="fa fa-map"></i>
+            <p>Toshkent shahri maksim gorkiy</p>
+          </li>
+          <li>
+            <i class="fa fa-envelope"></i>
+            <p>contact@gmail.com</p>
+          </li>
+          <li>
+            <i class="fa fa-phone-alt"></i>
+            <p>+99897 777 77 77</p>
+          </li>
+          <li>
+            <i class="fa fa-clock"></i>
+            <p>12:00</p>
+          </li>
+        </div>
+      </div>
+      <div class="contact-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d191885.5026461673!2d69.13928013748432!3d41.282512542897464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b0cc379e9c3%3A0xa5a9323b4aa5cb98!2z0KLQsNGI0LrQtdC90YIsINCj0LfQsdC10LrQuNGB0YLQsNC9!5e0!3m2!1sru!2s!4v1647401552466!5m2!1sru!2s"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
 
+    <section id="contact-form">
+      <form action="">
+        <p>Habar qoldiring</p>
+        <h2>Biz siz bilan tez orada bog'lanamiz!</h2>
+        <input type="text" placeholder="Your name" />
+        <input type="text" placeholder="Email" />
+        <input type="text" placeholder="Subject" />
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="your massage"
+        ></textarea>
+        <button class="normal">Submit</button>
+      </form>
+      <div class="contact-form-deteals">
+        <div class="contactimgWrapper">
+          <img src="./imges/people/1.png" alt="" />
+          <p>
+            <span>John Doe</span>Senior Marketing maneger <br />
+            Phone +998977777777 <br />
+            Email john@gmail.com
+          </p>
+        </div>
+        <div class="contactimgWrapper">
+            <img src="./imges/people/2.png" alt="" />
+            <p>
+              <span>John Doe</span>Senior Marketing maneger <br />
+              Phone +998977777777 <br />
+              Email john@gmail.com
+            </p>
+          </div>
+          <div class="contactimgWrapper">
+            <img src="./imges/people/3.png" alt="" />
+            <p>
+              <span>John Doe</span>Senior Marketing maneger <br />
+              Phone +998977777777 <br />
+              Email john@gmail.com
+            </p>
+          </div>
+      </div>
     </section>
 
     <footer class="section-p1">
