--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
     </section>
 
     <section id="shop-hero">
-      <h2>#stayhome</h2>
+      <h2>#Uydan chiqmasdan sotib oling!</h2>
       <p>Save more with coupons & up to 70% off!</p>
     </section>
 
