change some deteals

--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,10 @@
             ></a>
           </li>
         </ul>
-        <div id="bar"><i class="fa fa-outdent"></i></div>
+        <div class="barWrapper">
+          <div class="bar"><i class="fa fa-outdent"></i></div>
+          <div class="bar"><i class="far fa-shopping-bag"></i></div>
+        </div>
       </div>
     </section>
 
