--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,10 @@
             <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
           </li>
         </ul>
-        <div id="bar"><i class="fa fa-outdent"></i></div>
+        <div class="barWrapper">
+          <div class="bar"><i class="fa fa-outdent"></i></div>
+          <div class="bar"><i class="far fa-shopping-bag"></i></div>
+        </div>
       </div>
     </section>
 
