--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,10 +12,10 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <a href="#"><img src="imges/logo.png" class="logo" /></a>
       <div>
-        <ul id="navbar">
+        <ul class="navbar">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="blog.html" class="active">Blog</a></li>
@@ -32,12 +32,12 @@
       </div>
     </section>
 
-    <section id="blog-hero">
+    <section class="blog-hero">
       <h2>#Batafsil malumot</h2>
-      <p>Mahsulotlarimiz haqidagi barcha misollarni o'qing</p>
+      <p>Mahsulotlarimiz haqclassagi barcha misollarni o'qing</p>
     </section>
 
-    <section id="blogs">
+    <section class="blogs">
       <div class="blog-box">
         <div class="imgWrapper">
           <img src="./imges/blog/b3.jpg" alt="" />
@@ -88,13 +88,13 @@
       </div>
     </section>
 
-    <section id="pagination" class="section-p1">
+    <section class="pagination" class="section-p1">
       <a href="#">1</a>
       <a href="#">2</a>
       <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
     </section>
 
-    <section id="newsletter" class="section-p1" class="section-m1">
+    <section class="newsletter" class="section-p1" class="section-m1">
       <div class="letter">
         <h3 class="letterTitle">
           Yangiliklarni o'tkazmaslik uchun ro'yhatdan o'ting!
