--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,10 +12,10 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <a href="#"><img src="imges/logo.png" class="logo" /></a>
       <div>
-        <ul id="navbar">
+        <ul class="navbar">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -34,14 +34,14 @@
       </div>
     </section>
 
-    <section id="about-hero">
+    <section class="about-hero">
       <h2>#Biz bilan aloqa</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis!
       </p>
     </section>
 
-    <section id="cart" class="section-p1">
+    <section class="cart">
       <table>
         <thead>
           <tr>
@@ -98,7 +98,7 @@
       </table>
     </section>
 
-    <section id="coupon" class="section-p1">
+    <section class="coupon" >
       <div class="coupon-form">
         <h3>Apply Coupon</h3>
         <div>
@@ -125,7 +125,7 @@
       </div>
     </section>
 
-    <footer class="section-p1">
+    <footer>
       <div class="col">
         <img src="imges/logo.png" alt="" class="logo" />
         <h4>Contact:</h4>
