--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,10 +12,10 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <a href="#"><img src="imges/logo.png" class="logo" /></a>
       <div>
-        <ul id="navbar">
+        <ul class="navbar">
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -32,7 +32,7 @@
       </div>
     </section>
 
-    <section id="hero">
+    <section class="hero">
       <h4>Savdo-taklif</h4>
       <h2>Super qiymatli bitimlar</h2>
       <h1>Barcha mahsulotlarda</h1>
@@ -40,7 +40,7 @@
       <button>Hozir xarid qiling</button>
     </section>
 
-    <section id="feature" class="section-p1">
+    <section class="feature">
       <div class="fe-box">
         <img src="./imges/features/f1.png" alt="" />
         <h6>Yetkazib berish bepul</h6>
@@ -67,14 +67,14 @@
       </div>
     </section>
 
-    <section id="product1" class="section-p1">
+    <section class="product1">
       <h2>Tanlangan mahsulotlar</h2>
       <p>Yozgi kolleksiya yangi zamonaviy dizayn</p>
       <div class="pro-container">
         <div class="pro">
           <img src="./imges/products/f1.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -90,7 +90,7 @@
         <div class="pro">
           <img src="./imges/products/f2.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -106,7 +106,7 @@
         <div class="pro">
           <img src="./imges/products/f3.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -122,7 +122,7 @@
         <div class="pro">
           <img src="./imges/products/f4.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -138,7 +138,7 @@
         <div class="pro">
           <img src="./imges/products/f5.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -154,7 +154,7 @@
         <div class="pro">
           <img src="./imges/products/f6.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -170,7 +170,7 @@
         <div class="pro">
           <img src="./imges/products/f7.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -186,7 +186,7 @@
         <div class="pro">
           <img src="./imges/products/f8.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -202,7 +202,7 @@
       </div>
     </section>
 
-    <section id="banner">
+    <section class="banner">
       <h4>Ta'mirlash xizmatlari</h4>
       <h2>
         70% gacha <span>chegirma</span> - Barcha futbolkalar va Aksasuarlarga
@@ -210,14 +210,14 @@
       <button class="normal">Koʻproq ko'ring</button>
     </section>
 
-    <section id="product1" class="section-p1">
+    <section class="product1" class="section-p1">
       <h2>Yangi kelgan maxsulotlar</h2>
       <p>Yozgi kolleksiya yangi zamonaviy dizayn</p>
       <div class="pro-container">
         <div class="pro">
           <img src="./imges/products/n1.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -233,7 +233,7 @@
         <div class="pro">
           <img src="./imges/products/n2.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -249,7 +249,7 @@
         <div class="pro">
           <img src="./imges/products/n3.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -265,7 +265,7 @@
         <div class="pro">
           <img src="./imges/products/n4.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -281,7 +281,7 @@
         <div class="pro">
           <img src="./imges/products/n5.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -297,7 +297,7 @@
         <div class="pro">
           <img src="./imges/products/n6.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -313,7 +313,7 @@
         <div class="pro">
           <img src="./imges/products/n7.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -329,7 +329,7 @@
         <div class="pro">
           <img src="./imges/products/n8.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -345,7 +345,7 @@
       </div>
     </section>
 
-    <section id="sm-banner" class="section-p1">
+    <section class="sm-banner">
       <div class="banner-box">
         <h4>Ajoyib taklif!</h4>
         <h2>1 ta sotib ol 1 ta bepul</h2>
@@ -360,7 +360,7 @@
       </div>
     </section>
 
-    <section id="banner3">
+    <section class="banner3">
       <div class="banner-box">
         <h2>Mavsumiy sotuv</h2>
         <h3>Qish mavsum -50% chegirma</h3>
@@ -375,7 +375,7 @@
       </div>
     </section>
 
-    <section id="newsletter" class="section-p1" class="section-m1">
+    <section class="newsletter">
       <div class="letter">
         <h3 class="letterTitle">
           Yangiliklarni o'tkazmaslik uchun ro'yhatdan o'ting!
@@ -390,7 +390,7 @@
       </div>
     </section>
 
-    <footer class="section-p1">
+    <footer>
       <div class="col">
         <img src="imges/logo.png" alt="" class="logo" />
         <h4>Contact:</h4>
