--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,10 +12,10 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <a href="#"><img src="imges/logo.png" class="logo" /></a>
       <div>
-        <ul id="navbar">
+        <ul class="navbar">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html" class="active">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -32,17 +32,17 @@
       </div>
     </section>
 
-    <section id="shop-hero">
+    <section class="shop-hero">
       <h2>#Uydan chiqmasdan sotib oling!</h2>
       <p>Save more with coupons & up to 70% off!</p>
     </section>
 
-    <section id="product1" class="section-p1">
+    <section class="product1">
       <div class="pro-container">
         <div class="pro">
           <img src="./imges/products/f1.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -58,7 +58,7 @@
         <div class="pro">
           <img src="./imges/products/f2.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -74,7 +74,7 @@
         <div class="pro">
           <img src="./imges/products/f3.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -90,7 +90,7 @@
         <div class="pro">
           <img src="./imges/products/f4.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -106,7 +106,7 @@
         <div class="pro">
           <img src="./imges/products/f5.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -122,7 +122,7 @@
         <div class="pro">
           <img src="./imges/products/f6.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -138,7 +138,7 @@
         <div class="pro">
           <img src="./imges/products/f7.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -154,7 +154,7 @@
         <div class="pro">
           <img src="./imges/products/f8.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -171,7 +171,7 @@
         <div class="pro">
           <img src="./imges/products/n1.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -187,7 +187,7 @@
         <div class="pro">
           <img src="./imges/products/n2.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -203,7 +203,7 @@
         <div class="pro">
           <img src="./imges/products/n3.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -219,7 +219,7 @@
         <div class="pro">
           <img src="./imges/products/n4.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -235,7 +235,7 @@
         <div class="pro">
           <img src="./imges/products/n5.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -251,7 +251,7 @@
         <div class="pro">
           <img src="./imges/products/n6.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -267,7 +267,7 @@
         <div class="pro">
           <img src="./imges/products/n7.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -283,7 +283,7 @@
         <div class="pro">
           <img src="./imges/products/n8.jpg" alt="" />
           <div class="des">
-            <span>adidas </span>
+            <span>adclassas </span>
             <h5>Kosmonavt futbolkalari</h5>
             <div class="star">
               <i class="fas fa-star"></i>
@@ -299,13 +299,13 @@
       </div>
     </section>
     
-    <section id="pagination" class="section-p1">
+    <section class="pagination">
       <a href="#">1</a>
       <a href="#">2</a>
       <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
     </section>
 
-    <section id="newsletter" class="section-p1" class="section-m1">
+    <section class="newsletter" class="section-p1" class="section-m1">
       <div class="letter">
         <h3 class="letterTitle">
           Yangiliklarni o'tkazmaslik uchun ro'yhatdan o'ting!
@@ -320,7 +320,7 @@
       </div>
     </section>
 
-    <footer class="section-p1">
+    <footer>
       <div class="col">
         <img src="imges/logo.png" alt="" class="logo" />
         <h4>Contact:</h4>
