--- a/sproduct.html
+++ b/sproduct.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,10 +12,10 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <a href="#"><img src="imges/logo.png" class="logo" /></a>
       <div>
-        <ul id="navbar">
+        <ul class="navbar">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html" class="active">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -32,7 +32,7 @@
       </div>
     </section>
 
-    <section id="single-product" class="section-p1">
+    <section class="single-product" class="section-p1">
       <div class="single-product-image-wrapper">
         <img src="./imges/products/f1.jpg" alt="" />
         <div class="single-product-image-group">
@@ -69,14 +69,14 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis non,
           ducimus adipisci velit quibusdam veritatis ipsa, mollitia sunt culpa
-          praesentium asperiores atque nobis deserunt id libero nostrum a nihil
+          praesentium asperiores atque nobis deserunt class libero nostrum a nihil
           odit iste doloremque quod! Perferendis dolores voluptatem, similique
           laborum molestiae earum aspernatur accusamus velit minus labore iure?
         </p>
       </div>
     </section>
 
-    <section id="newsletter" class="section-p1" class="section-m1">
+    <section class="newsletter" class="section-p1" class="section-m1">
       <div class="letter">
         <h3 class="letterTitle">
           Yangiliklarni o'tkazmaslik uchun ro'yhatdan o'ting!
