--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,10 +12,10 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <a href="#"><img src="imges/logo.png" class="logo" /></a>
       <div>
-        <ul id="navbar">
+        <ul class="navbar">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -32,14 +32,14 @@
       </div>
     </section>
 
-    <section id="about-hero">
+    <section class="about-hero">
       <h2>#Biz haqimizda</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis!
       </p>
     </section>
 
-    <section id="about">
+    <section class="about">
       <div class="aboutimgWrapper">
         <img src="./imges/about/a6.jpg" alt="" />
       </div>
@@ -54,7 +54,7 @@
           Est eius quis praesentium repellendus facere!
         </p>
         <abbr
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquclass
           maxime praesentium laboriosam hic rerum nemo tenetur repellat ipsam
           quis architecto!</abbr
         >
@@ -62,19 +62,19 @@
         <br />
         <marquee loop="-1" bgcolor="gray" scrollamount="5"
           >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
-          corrupti, cupiditate commodi inventore veritatis debitis.</marquee
+          corrupti, cupclassitate commodi inventore veritatis debitis.</marquee
         >
       </div>
     </section>
 
-    <section id="about-video">
-      <div class="WrapperVideo">
-        <video loop autoplay controls src="./imges/about/1.mp4"></video>
+    <section class="about-vclasseo">
+      <div class="WrapperVclasseo">
+        <vclasseo loop autoplay controls src="./imges/about/1.mp4"></vclasseo>
       </div>
     </section>
 
 
-    <section id="feature" class="section-p1">
+    <section class="feature" class="section-p1">
       <div class="fe-box">
         <img src="./imges/features/f1.png" alt="" />
         <h6>Yetkazib berish bepul</h6>
@@ -102,7 +102,7 @@
     </section>
 
 
-    <section id="newsletter" class="section-p1" class="section-m1">
+    <section class="newsletter" class="section-p1" class="section-m1">
       <div class="letter">
         <h3 class="letterTitle">
           Yangiliklarni o'tkazmaslik uchun ro'yhatdan o'ting!
