--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,10 +12,10 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <a href="#"><img src="imges/logo.png" class="logo" /></a>
       <div>
-        <ul id="navbar">
+        <ul class="navbar">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -32,21 +32,21 @@
       </div>
     </section>
 
-    <section id="about-hero">
+    <section class="about-hero">
       <h2>#Biz bilan aloqa</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis!
       </p>
     </section>
 
-    <section id="contact" class="section-p1">
+    <section class="contact">
       <div class="contact-deatels">
         <p>Bizga bog'laning</p>
         <h2>
-          Bizning agentlik manzillaridan biriga tashrif buyuring yoki bugun biz
+          Bizning agentlik manzillarclassan biriga tashrif buyuring yoki bugun biz
           bilan bog'laning
         </h2>
-        <h3>Bosh idora</h3>
+        <h3>Bosh classora</h3>
         <div>
           <li>
             <i class="fa fa-map"></i>
@@ -69,7 +69,7 @@
       <div class="contact-map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d191885.5026461673!2d69.13928013748432!3d41.282512542897464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b0cc379e9c3%3A0xa5a9323b4aa5cb98!2z0KLQsNGI0LrQtdC90YIsINCj0LfQsdC10LrQuNGB0YLQsNC9!5e0!3m2!1sru!2s!4v1647401552466!5m2!1sru!2s"
-          width="600"
+          wclassth="600"
           height="450"
           style="border: 0"
           allowfullscreen=""
@@ -78,7 +78,7 @@
       </div>
     </section>
 
-    <section id="contact-form">
+    <section class="contact-form">
       <form action="">
         <p>Habar qoldiring</p>
         <h2>Biz siz bilan tez orada bog'lanamiz!</h2>
@@ -87,7 +87,7 @@
         <input type="text" placeholder="Subject" />
         <textarea
           name=""
-          id=""
+          class=""
           cols="30"
           rows="10"
           placeholder="your massage"
@@ -122,7 +122,7 @@
       </div>
     </section>
 
-    <footer class="section-p1">
+    <footer>
       <div class="col">
         <img src="imges/logo.png" alt="" class="logo" />
         <h4>Contact:</h4>
