some changed style

--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="wclassth=device-wclassth, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -67,12 +70,11 @@
       </div>
     </section>
 
-    <section class="about-vclasseo">
-      <div class="WrapperVclasseo">
-        <vclasseo loop autoplay controls src="./imges/about/1.mp4"></vclasseo>
+    <section class="about-video">
+      <div class="WrapperVideo">
+        <video loop autoplay controls src="./imges/about/1.mp4"></video>
       </div>
     </section>
-
 
     <section class="feature" class="section-p1">
       <div class="fe-box">
@@ -101,8 +103,7 @@
       </div>
     </section>
 
-
-    <section class="newsletter" class="section-p1" class="section-m1">
+    <section class="newsletter">
       <div class="letter">
         <h3 class="letterTitle">
           Yangiliklarni o'tkazmaslik uchun ro'yhatdan o'ting!
@@ -117,8 +118,7 @@
       </div>
     </section>
 
-
-    <footer class="section-p1">
+    <footer>
       <div class="col">
         <img src="imges/logo.png" alt="" class="logo" />
         <h4>Contact:</h4>
