--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <button class="normal">Koʻproq ko'ring</button>
     </section>
 
-    <section class="product1" class="section-p1">
+    <section class="product1" >
       <h2>Yangi kelgan maxsulotlar</h2>
       <p>Yozgi kolleksiya yangi zamonaviy dizayn</p>
       <div class="pro-container">
@@ -276,7 +276,7 @@
             </div>
             <h4>350 So'm</h4>
           </div>
-          <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+          <!-- <a href="#"><i class="fas fa-shopping-cart cart"></i></a> -->
         </div>
         <div class="pro">
           <img src="./imges/products/n5.jpg" alt="" />
