--- a/sproduct.html
+++ b/sproduct.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="wclassth=device-wclassth, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -32,7 +35,7 @@
       </div>
     </section>
 
-    <section class="single-product" class="section-p1">
+    <section class="single-product">
       <div class="single-product-image-wrapper">
         <img src="./imges/products/f1.jpg" alt="" />
         <div class="single-product-image-group">
@@ -69,14 +72,15 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis non,
           ducimus adipisci velit quibusdam veritatis ipsa, mollitia sunt culpa
-          praesentium asperiores atque nobis deserunt class libero nostrum a nihil
-          odit iste doloremque quod! Perferendis dolores voluptatem, similique
-          laborum molestiae earum aspernatur accusamus velit minus labore iure?
+          praesentium asperiores atque nobis deserunt class libero nostrum a
+          nihil odit iste doloremque quod! Perferendis dolores voluptatem,
+          similique laborum molestiae earum aspernatur accusamus velit minus
+          labore iure?
         </p>
       </div>
     </section>
 
-    <section class="newsletter" class="section-p1" class="section-m1">
+    <section class="newsletter">
       <div class="letter">
         <h3 class="letterTitle">
           Yangiliklarni o'tkazmaslik uchun ro'yhatdan o'ting!
@@ -91,7 +95,7 @@
       </div>
     </section>
 
-    <footer class="section-p1">
+    <footer>
       <div class="col">
         <img src="imges/logo.png" alt="" class="logo" />
         <h4>Contact:</h4>
